--- a/express/code/scripts/widgets/compact-nav-carousel.css
+++ b/express/code/scripts/widgets/compact-nav-carousel.css
@@ -11,6 +11,10 @@
     --four-ele-template-height: 207px;
     --four-ele-template-width: 207px;
     --basic-carousel-fader-width: 53px;
+    --carousel-offset: 16px;
+  
+    width: 100vw;
+    left: calc(-1 *var(--carousel-offset));
   }
   
   .compact-nav-carousel-container .compact-nav-carousel-platform {
@@ -32,6 +36,16 @@
     scroll-behavior: smooth;
     border-radius: 8px;
   }
+
+
+.compact-nav-carousel-container .compact-nav-carousel-platform .card:first-child {
+  margin-left: var(--carousel-offset)
+}
+
+.compact-nav-carousel-container .compact-nav-carousel-platform .card:last-child{
+  margin-right: var(--carousel-offset)
+}
+
   
   .compact-nav-carousel-container:not(.controls-hidden) .compact-nav-carousel-platform::-webkit-scrollbar,
   .compact-nav-carousel-container .compact-nav-carousel-platform.infinity-scroll-loaded::-webkit-scrollbar {
@@ -377,14 +391,26 @@
   }
 
   @media (min-width: 768px) {
+
+    .compact-nav-carousel-container {
+      --carousel-offset: 24px;
+      left: calc(-1 *var(--carousel-offset));
+    }
+
     .compact-nav-carousel-container .gallery-control  {
       padding: 32px 16px 0 32px;
     }
   }
 
   @media (min-width: 1280px) {
+
+    .compact-nav-carousel-container {
+      --carousel-offset: 32px;
+      left: calc(-1 *var(--carousel-offset));
+    }
  
     .compact-nav-carousel-container .gallery-control  {
       padding: 24px 24px 0px 40px;
     }
   }
+
